// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyDetails component renders all types of details 1`] = `
<div>
  <div
    class="CompanyDetails-root-37"
  >
    <h5
      class="MuiTypography-root CompanyDetails-title-38 Typography-root-51 MuiTypography-h5"
      data-testid="typography"
    >
      Name of the company
    </h5>
    <div>
      <dl
        class="CompanyDetails-list-39"
      >
        <address
          class="CompanyDetails-row-42 CompanyDetails-address-41"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Address
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            full address
          </dd>
        </address>
        <address
          class="CompanyDetails-row-42 CompanyDetails-address-41"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Address
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <b>
              full address
            </b>
          </dd>
        </address>
        <address
          class="CompanyDetails-row-42 CompanyDetails-address-41"
        >
          <dt
            class="CompanyDetails-term-45"
          />
          <dd
            class="CompanyDetails-description-46"
          >
            full address
          </dd>
        </address>
        <address
          class="CompanyDetails-row-42 CompanyDetails-address-41"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Address
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            full address
          </dd>
        </address>
        <address
          class="CompanyDetails-row-42 CompanyDetails-address-41"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <span
              class="MuiTypography-root CompanyDetails-label-47 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Address
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            full address
          </dd>
        </address>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M21.71 11.29l-9-9a.9959.9959 0 00-1.41 0l-9 9c-.39.39-.39 1.02 0 1.41l9 9c.39.39 1.02.39 1.41 0l9-9c.39-.38.39-1.01 0-1.41zM14 14.5V12h-4v3H8v-4c0-.55.45-1 1-1h5V7.5l3.5 3.5-3.5 3.5z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Distance
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            12.56km
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42, CompanyDetails-cta-43"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiButton-root Button-root-59 MuiButton-contained Button-contained-61 CompanyDetails-button-48 MuiButton-containedPrimary"
            href="https://google.com"
            tabindex="0"
          >
            <span
              class="MuiButton-label Button-label-62"
            >
              Get directions
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </a>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Telephone
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover CompanyDetails-link-50 AnchorLink-root-79 Anchorlink MuiTypography-colorPrimary"
              href="tel:000000000000"
            >
              <span>
                67 97 90 99
              </span>
            </a>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Email
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover CompanyDetails-link-50 AnchorLink-root-79 Anchorlink MuiTypography-colorPrimary"
              href="mailto:hello@roofingcompany.com"
            >
              <span>
                hello@roofingcompany.com
              </span>
            </a>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root CompanyDetails-icon-44"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"
              />
            </svg>
            <span
              class="MuiTypography-root CompanyDetails-label-47 CompanyDetails-accessibilityLabel-49 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Website
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover CompanyDetails-link-50 AnchorLink-root-79 Anchorlink MuiTypography-colorPrimary"
              href="https://roofingcompany.com"
            >
              <span>
                Visit website
              </span>
            </a>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <span
              class="MuiTypography-root CompanyDetails-label-47 Typography-root-51 MuiTypography-body1"
              data-testid="typography"
            >
              Type of roof
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <b>
              Flat
            </b>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <span
              class="CompanyDetails-label-47"
            >
              BMI RoofPro Level
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <svg
              class="CompanyDetails-roofProLevelIcon-40"
            />
            <span
              class="CompanyDetails-accessibilityLabel-49"
            >
              expert
            </span>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <span
              class="CompanyDetails-label-47"
            >
              BMI RoofPro Level
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <svg
              class="CompanyDetails-roofProLevelIcon-40"
            />
            <span
              class="CompanyDetails-accessibilityLabel-49"
            >
              elite
            </span>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <span
              class="CompanyDetails-label-47"
            >
              BMI RoofPro Level
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <svg
              class="CompanyDetails-roofProLevelIcon-40"
            />
            <span
              class="CompanyDetails-accessibilityLabel-49"
            >
              partner
            </span>
          </dd>
        </div>
        <div
          class="CompanyDetails-row-42"
        >
          <dt
            class="CompanyDetails-term-45"
          >
            <span
              class="CompanyDetails-label-47"
            >
              BMI RoofPro Level
            </span>
          </dt>
          <dd
            class="CompanyDetails-description-46"
          >
            <pre
              style="color: rgb(214, 0, 28);"
            >
              Error: Level "
              invalid-level
              " does not exist
            </pre>
            <span
              class="CompanyDetails-accessibilityLabel-49"
            >
              invalid-level
            </span>
          </dd>
        </div>
      </dl>
      <p>
        Summary
      </p>
    </div>
  </div>
</div>
`;

exports[`CompanyDetails component renders with no details 1`] = `
<div>
  <div
    class="CompanyDetails-root-1"
  >
    <h5
      class="MuiTypography-root CompanyDetails-title-2 Typography-root-15 MuiTypography-h5"
      data-testid="typography"
    >
      Name of the company
    </h5>
    <div>
      <p>
        Summary
      </p>
    </div>
  </div>
</div>
`;

exports[`CompanyDetails component renders with no details and no name 1`] = `
<div
  class="CompanyDetails-root-23"
>
  <div>
    <p>
      Summary
    </p>
  </div>
</div>
`;
